<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="buttonText">I\’m a button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginTextview">Login</string>
    <string name="passwordTextview">Password</string>
    <string name="title_activity_list_items">ListItemsActivity</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="switchText">Enable Something</string>
    <string name="loginName">Login Name</string>
    <string name="loginButton">Login</string>
    <string name="dialog_message">Do you wish to exit?</string>
    <string name="dialog_Title">Exit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="chatButton">Start Chat</string>
    <string name="title_activity_chat_window">ChatWindow</string>
    <string name="sendButton">Send</string>
    <string name="messageText">Message</string>
    <string name="TextView">TextView</string>
    <string name="title_activity_weather_forecast">WeatherForecast</string>
    <string name="Weather">Weather</string>
    <string name="action_settings">Settings</string>

</resources>
