<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.user.lab1.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:orientation="vertical">

    <TextView
        android:text="@string/loginTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <EditText
        android:name = "@string/loginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/loginEmail"
        android:hint="@string/loginName"
        android:inputType="textEmailAddress" />

    <TextView
        android:text="@string/passwordTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordTextview"
        android:ems="10"
        android:id="@+id/editText2"
        android:inputType="textPassword" />

    <Button
        android:text="@string/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton1" />

</LinearLayout>
